--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="container-fluid"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
