--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <title>Vite + React</title>
+    <title>COMICVERSE</title>
   </head>
   <body>
     <div id="root"></div>
